--- a/style.css
+++ b/style.css
@@ -20,12 +20,14 @@ h5 {
 
 h2 {
   text-shadow: 1px 0px 20px black;
+  margin: 10px;
 }
 
 p {
   margin: 20px;
   background-color: #ffffff;
   border-radius: 20px;
+  box-shadow: 7px 7px 20px 1px rgba(48, 50, 50, 0.75);
 }
 
 input {
@@ -52,4 +54,12 @@ input {
 
 img {
   max-width: 1000px;
+  margin: 20px;
+  box-shadow: 7px 7px 20px 1px rgba(48, 50, 50, 0.75);
+}
+
+footer {
+  background-color: #000000;
+  min-height: 100px;
+  width: 100%;
 }
